--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                 <div id="memoryCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="photos/IMG20240515192326-1.jpg" class="d-block w-100" alt="">
+                            <img src="IMG20240515192326-1.jpg" class="d-block w-100" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="photos/IMG_20220619_190822762.jpg" class="d-block w-100" alt="Image 2">
+                            <img src="IMG_20220619_190822762.jpg" class="d-block w-100" alt="Image 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="photos/IMG_20221118_174530464.jpg" class="d-block w-100" alt="Image 3">
+                            <img src="IMG_20221118_174530464.jpg" class="d-block w-100" alt="Image 3">
                         </div>
                         <div class="carousel-item">
                             <img src="https://lh3.googleusercontent.com/pw/AP1GczPQowa9L5tmUWgOVrdQzWNBqKkGeXQIfgDyW-NguR0GMDJdxgB7rreZnEJkbpyQ96N47_DVorzRc-lfKIoA5l0vuDkDWpAOk1lBUV84gzI1lafdT3MtWR0vxzfUTBakIjEsutD_t8_683yhVLYc-HA=w651-h869-s-no-gm?authuser=0" class="d-block w-100" alt="Image 4">
